Added Resource file. Some classes for UIDefinition to be perhaps used.

--- a/GjammT/Components/Pages/Home.razor
+++ b/GjammT/Components/Pages/Home.razor
@@ -50,8 +50,10 @@
             var identity = new ClaimsIdentity(claims, CookieAuthenticationDefaults.AuthenticationScheme);
             var principal = new ClaimsPrincipal(identity);
 
-            await (HttpContext?.SignInAsync(CookieAuthenticationDefaults.AuthenticationScheme, principal) ?? Task.CompletedTask);
-            NavigationManager.Refresh(true);
+            if(HttpContext is not null) {
+                await (HttpContext?.SignInAsync(CookieAuthenticationDefaults.AuthenticationScheme, principal) ?? Task.CompletedTask);
+                NavigationManager.Refresh(true);
+            }
         }
     } 
 }
