--- a/GjammT/Components/Layout/NavMenu.razor
+++ b/GjammT/Components/Layout/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using GjammT.Models
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">GjammT</a>
     </div>
@@ -11,6 +12,9 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+            </NavLink>
+            <NavLink class="nav-link" href="/AccessSystems" Match="NavLinkMatch.All">
+                <span class="bi bi-key-fill-nav-menu" aria-hidden="true"></span> @Resources.ACCESS_SYSTEM
             </NavLink>
         </div>
     </nav>
