Playing around with future module loadable system with AssembloLoadContext.

--- a/GjammT/Components/Layout/MainLayout.razor
+++ b/GjammT/Components/Layout/MainLayout.razor
@@ -1,4 +1,7 @@
-﻿@inherits LayoutComponentBase
+﻿@using System.Reflection
+@using System.Runtime.Loader
+@using GjammT.Models.UI
+@inherits LayoutComponentBase
 
 <div class="page">
     <div class="sidebar">
@@ -7,6 +10,7 @@
 
     <main>
         <div class="top-row px-4">
+            <h1>@uiName</h1>
         </div>
 
         <article class="content px-4">
@@ -20,3 +24,35 @@
     <a href="." class="reload">Reload</a>
     <span class="dismiss">🗙</span>
 </div>
+@code {
+    private string uiName { get; set; }
+    private AssemblyLoadContext? _loadContext;
+
+    protected override void OnInitialized()
+    {
+        Unload();
+
+        string dllPath = "/Users/joelmandell/RiderProjects/GjammT/GjammT.CustomerRegister/bin/Debug/net9.0/GjammT.CustomerRegister.dll";
+        _loadContext = new PluginLoadContext(dllPath);
+        var bytes = File.ReadAllBytes(dllPath);
+
+        var fileAssembly = _loadContext.LoadFromStream(new MemoryStream(bytes));
+        
+        var uiDeclaration = fileAssembly.GetTypes().First(x => x.BaseType == typeof(BaseDefinition));
+        var uiDeclareInstance = (BaseDefinition?)Activator.CreateInstance(uiDeclaration);
+        uiName = uiDeclareInstance?.ResourceName ?? "NOT FOUND";
+        base.OnInitialized();
+    }
+    
+    public void Unload()
+    {
+        if (_loadContext != null)
+        {
+            _loadContext.Unload();
+            _loadContext = null;
+
+            GC.Collect();
+            GC.WaitForPendingFinalizers();
+        }
+    }
+}
