--- a/GjammT/Components/_Imports.razor
+++ b/GjammT/Components/_Imports.razor
@@ -8,3 +8,8 @@
 @using Microsoft.JSInterop
 @using GjammT
 @using GjammT.Components
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.Navigations
+@using Syncfusion.Blazor.Buttons
+@using Syncfusion.Blazor.Inputs
+@using GjammT.Components.Auth
