--- a/GjammT/Components/App.razor
+++ b/GjammT/Components/App.razor
@@ -1,21 +1,48 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="light">
 
 <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <base href="/"/>
-    <link rel="stylesheet" href="@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]"/>
-    <link rel="stylesheet" href="@Assets["app.css"]"/>
-    <link rel="stylesheet" href="@Assets["GjammT.styles.css"]"/>
-    <ImportMap/>
-    <link rel="icon" type="image/png" href="favicon.png"/>
-    <HeadOutlet/>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <base href="/"/>
+  <link href="_content/Syncfusion.Blazor.Themes/tailwind.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="@Assets["app.css"]"/>
+  <link rel="stylesheet" href="@Assets["GjammT.styles.css"]"/>
+  <ImportMap/>
+  <link rel="icon" type="image/png" href="favicon.png"/>
+  <HeadOutlet/>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      darkMode: "class",
+      theme: {
+        extend: {
+          colors: {
+            // NOTE: In this demo, different shades of "Indigo" are used as primary colors.
+            primary: {
+              "50": "#eef2ff",
+              "100": "#e0e7ff",
+              "200": "#c7d2fe",
+              "300": "#a5b4fc",
+              "400": "#818cf8",
+              "500": "#6366f1",
+              "600": "#4f46e5",
+              "700": "#4338ca",
+              "800": "#3730a3",
+              "900": "#312e81",
+              "950": "#1e1b4b"
+            }
+          }
+        }
+      }
+    }
+  </script>
 </head>
 
 <body>
-<Routes/>
-<script src="_framework/blazor.web.js"></script>
+  <Routes @rendermode=RenderMode.InteractiveServer />
+  <script src="_framework/blazor.web.js"></script>
+  <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
 </body>
 
 </html>
