Somewhat usage of dynamic module (for resources at least)

--- a/GjammT/Components/Auth/SignIn.razor
+++ b/GjammT/Components/Auth/SignIn.razor
@@ -1,5 +1,5 @@
-@using GjammT.Models
-@using GjammT.Models.Auth
+@using GjammT.Auth.Models
+@using GjammT.SharedKernel
 
 <section class="bg-gray-50 dark:bg-gray-950">
     <div class="flex items-center justify-center min-h-screen">
@@ -7,25 +7,25 @@
             <div class="flex justify-center mb-6">
                 <h2 class="text-center text-gray-900 dark:text-white text-xl font-semibold">@ProgramInfo.Name (@ProgramInfo.Version)</h2>
             </div>
-            <h2 class="text-2xl font-semibold text-gray-900 dark:text-white text-center mb-2">@Resources.SIGNIN</h2>
+            <h2 class="text-2xl font-semibold text-gray-900 dark:text-white text-center mb-2">@ProgramInfo.Resource("SIGNIN")</h2>
             <form method="post" action="/auth/signin">
                 <AntiforgeryToken/>
                 <div class="mb-4">
-                    <label for="username" class="block mb-1 text-sm font-medium text-gray-700 dark:text-gray-300">@Resources.USERNAME</label>
-                    <SfTextBox ID="username" @bind-Value="LoginModel.UserName" CssClass="e-bigger" Type="InputType.Text" Placeholder=@Resources.USERNAME
-                               FloatLabelType="FloatLabelType.Never" aria-label=@Resources.ENTER_USERNAME name="LoginModel.UserName"
+                    <label for="username" class="block mb-1 text-sm font-medium text-gray-700 dark:text-gray-300">@ProgramInfo.Resource("USERNAME")</label>
+                    <SfTextBox ID="username" @bind-Value="LoginModel.UserName" CssClass="e-bigger" Type="InputType.Text" Placeholder=@ProgramInfo.Resource("USERNAME")
+                               FloatLabelType="FloatLabelType.Never" aria-label=@ProgramInfo.Resource("ENTER_USERNAME") name="LoginModel.UserName"
                                role="textbox"></SfTextBox>
                 </div>
                 <div class="mb-5 relative">
                     <label for="password"
-                           class="block mb-1 text-sm font-medium text-gray-700 dark:text-gray-300">@Resources.ENTER_PASSWORD</label>
-                    <SfTextBox ID="password" @bind-Value="LoginModel.Password" CssClass="e-bigger bg-none" Type="InputType.Password" Placeholder=@Resources.PASSWORD
-                               FloatLabelType="FloatLabelType.Never" aria-label=@Resources.ENTER_PASSWORD
+                           class="block mb-1 text-sm font-medium text-gray-700 dark:text-gray-300">@ProgramInfo.Resource("PASSWORD")</label>
+                    <SfTextBox ID="password" @bind-Value="LoginModel.Password" CssClass="e-bigger bg-none" Type="InputType.Password" Placeholder=@ProgramInfo.Resource("PASSWORD")
+                               FloatLabelType="FloatLabelType.Never" aria-label=@ProgramInfo.Resource("ENTER_PASSWORD")
                                role="textbox" name="LoginModel.Password"></SfTextBox>
                 </div>
                 <div class="e-bigger mt-6">
                     <SfButton CssClass="w-full e-primary e-btn" type="submit" aria-label="sign in" role="button">
-                        @Resources.SIGNIN
+                        @ProgramInfo.Resource("SIGNIN")
                     </SfButton>
                 </div>
             </form>
