--- a/GjammT/Components/App.razor
+++ b/GjammT/Components/App.razor
@@ -40,7 +40,7 @@
 </head>
 
 <body>
-  <Routes @rendermode=RenderMode.InteractiveServer />
+  <Routes @rendermode=InteractiveServer />
   <script src="_framework/blazor.web.js"></script>
   <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
 </body>
