--- a/GjammT/Components/Routes.razor
+++ b/GjammT/Components/Routes.razor
@@ -1,7 +1,11 @@
-﻿@using Microsoft.AspNetCore.Components.Authorization
-
-<Router AppAssembly="typeof(Program).Assembly">
+﻿@using GjammT.SharedKernel
+@using Microsoft.AspNetCore.Components.Authorization
+@inject ProgramInfo ProgramInfo
+<Router AppAssembly="typeof(Program).Assembly" AdditionalAssemblies="ProgramInfo.GetLoadedAssemblies()">
     <Found Context="routeData">
         <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)"/>
     </Found>
+    <NotFound>
+        <p>Hello</p>
+    </NotFound>
 </Router>
