Fix usage of loading blazor pages and its dependencies dynamically.

--- a/GjammT/Components/Pages/AccessSystems.razor
+++ b/GjammT/Components/Pages/AccessSystems.razor
@@ -1,8 +1,9 @@
 @page "/AccessSystems"
-@using GjammT.Models
-<PageTitle>@Resources.ACCESS_SYSTEM</PageTitle>
+@using GjammT.SharedKernel
 
-<h3>@Resources.ACCESS_SYSTEM</h3>
+<PageTitle>@ProgramInfo.Resource("ACCESS_SYSTEM")</PageTitle>
+
+<h3>@ProgramInfo.Resource("ACCESS_SYSTEM")</h3>
 
 @code {
     
