--- a/GjammT.CustomerRegister/Pages/Home.razor
+++ b/GjammT.CustomerRegister/Pages/Home.razor
@@ -3,11 +3,19 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using GjammT.CustomerRegister.Components
 @rendermode Microsoft.AspNetCore.Components.Web.RenderMode.InteractiveServer
 <h3>@ProgramInfo.Resource("CUSTOMER_REGISTER")</h3>
-<p>Menylayout mobil reflection render</p>
+<CustomerHead />
 <button class="e-primary e-btn" @onclick="() => counter++">Increment</button>
+<button class="e-primary e-btn" @onclick="async () => bar = await CustomerService.Bar()">Dot</button>
+<NavLink href="/CustomerRegister/Settings" >Settings</NavLink>
+<NavLink href="/CustomerRegister/Statistics" >Statistics</NavLink>
+
+@bar
 Current count: @counter
+@CustomerService.ModuleInfo
 @code {
     public int counter { get; set; }
+    public string bar { get; set; }
 }
