--- a/GjammT/Components/Pages/Demo.razor
+++ b/GjammT/Components/Pages/Demo.razor
@@ -12,7 +12,6 @@
 
     public void reload()
     {
-        var path = $"/Users/joelmandell/RiderProjects/GjammT/GjammT.CustomerRegister/bin/Debug/net10.0/GjammT.CustomerRegister.dll";
-        ProgramInfo.LoadComponentAssembly(path);
+        ProgramInfo.LoadComponentAssembly("GjammT.CustomerRegister");
     }
 }
