Hacking around with preparing dev experience. Hardcoded selection of loading specific modules. Csproj sdk change to razor

--- a/GjammT.CustomerRegister/Pages/Home.razor
+++ b/GjammT.CustomerRegister/Pages/Home.razor
@@ -1,14 +1,8 @@
 @page "/CustomerRegister"
 @using GjammT.SharedKernel
-@using Microsoft.AspNetCore.Components.Forms
-@using Microsoft.AspNetCore.Components.Routing
-@using Microsoft.AspNetCore.Components.Web
 @using GjammT.CustomerRegister.Components
 @rendermode Microsoft.AspNetCore.Components.Web.RenderMode.InteractiveServer
-<h3>@ProgramInfo.Resource("CUSTOMER_REGISTER")</h3>
+<h3>@ProgramInfo.Resource("CUSTOMER_REGISTER") :)ss</h3>
 <CustomerHead />
-<NavLink href="/CustomerRegister/Settings" >Settings</NavLink>
-<NavLink href="/CustomerRegister/Statistics" >Statistics</NavLink>
-@CustomerService.ModuleInfo
 @code {
 }
