--- a/GjammT.CustomerRegister/Pages/CustomerRegisterSettings.razor
+++ b/GjammT.CustomerRegister/Pages/CustomerRegisterSettings.razor
@@ -1,6 +1,5 @@
 @page "/CustomerRegister/Settings"
-<h3>CustomerRegisterSettings</h3>
+@using Microsoft.AspNetCore.Components.Web
+@rendermode @(new InteractiveServerRenderMode(prerender: false));
 
-@code {
-    
-}
+<h3>CustomerRegisterSettings</h3>
